--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,4 @@
 {
-
   "manifest_version": 2,
   "name": "Chordify",
   "description": "Chordify",
@@ -9,29 +8,26 @@
       "strict_min_version": "57.0"
     }
   },
-
   "background": {
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
-
   "permissions": [
     "webRequest",
-     "*://*.youtube.com/*",
-     "*://*.chordify.net/chords/*",
-     "tabs",
-     "storage"
+    "*://*.youtube.com/*",
+    "*://*.chordify.net/chords/*",
+    "tabs",
+    "storage"
   ],
-
   "browser_action": {
-      "default_icon": "icons/page-32.png",
-      "default_title": "Chordify",
-      "default_popup": "popup/page.html"
+    "default_icon": "icons/page-32.png",
+    "default_title": "Chordify",
+    "default_popup": "popup/page.html"
   },
-
   "web_accessible_resources": [
     "chords/*.png"
   ],
-
   "icons": {
     "16": "icons/page-16.png",
     "32": "icons/page-32.png",
