--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,6 +14,13 @@
     "scripts": ["background.js"]
   },
 
+  "content_scripts": [
+    {
+      "matches": ["*://*.chordify.net/*"],
+      "js": ["contentScript.js"]
+    }
+  ],
+
   "permissions": [
     "webRequest",
      "*://*.youtube.com/*"
